Added tests of scan_arcticdb

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 dependencies = [
     "polars>=0.20.0",
     "arcticdb>=4.0.0",
+    "pyarrow>=21",
 ]
 
 [project.optional-dependencies]
